--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -285,3 +285,16 @@ input[type="number"]::-webkit-outer-spin-button {
     width: 23px;
     height: 23px;
 }
+
+.icon-25px {
+    width: 25px;
+    height: 25px;
+}
+
+.ps-6px {
+    padding-left: 6px !important;
+}
+
+.text-\[\#959595\] {
+    color: #959595;
+}
