--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -345,9 +345,10 @@
     }
     .range-label {
         font-weight: bold;
-        font-size: 30px;
-        line-height: 37px;
+        font-size: 24px;
+        line-height: 29px;
         text-transform: uppercase;
+        margin-bottom: 21px;
     }
     .range-input,
     .total-input {
