--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -298,3 +298,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .text-\[\#959595\] {
     color: #959595;
 }
+
+.h-90 {
+    height: 90% !important;
+}
