fix Change password modal border and show password checkbox style

--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -490,6 +490,7 @@
 
 .pwd-modal {
     max-width: 539px;
+    border: none;
     &__header {
         display: flex;
         justify-content: space-between;
@@ -518,6 +519,13 @@
             line-height: 22px;
             padding: 15px 95px;
         }
+    }
+    .form-check-input {
+        border: 1px solid #ffffff;
+        background-color: $black;
+        width: 18px;
+        height: 18px;
+        border-radius: unset;
     }
     .form {
         padding: 18px 51px;
