--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -228,7 +228,7 @@
                         font-size: 18px !important;
                         line-height: 22px !important;
                         text-transform: uppercase !important;
-                        color: lightgray;
+                        color: white;
                         @include mq("phone", max) {
                             display: none;
                         }
