Landing / Logos / Added the new logos

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -302,3 +302,11 @@ input[type="number"]::-webkit-outer-spin-button {
 .h-85 {
     height: 85% !important;
 }
+
+.mt-9px {
+    margin-top: 9px !important;
+}
+
+.mb-5px {
+    margin-bottom: 5px !important;
+}
