--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -148,6 +148,45 @@
     }
 }
 
+.countdown-pending-wrapper {
+    line-height: 6px;
+    .time-section {
+        text-align: center;
+        .time {
+            font-weight: bold;
+            font-weight: bold;
+            font-size: 72px;
+            line-height: 92px;
+            letter-spacing: 0.05em;
+            @include mq("tablet", max) {
+                font-size: 37.8092px;
+                line-height: 46px;
+            }
+            @include mq("phone", max) {
+                font-size: 64px;
+                line-height: 78px;
+                letter-spacing: -0.02em;
+            }
+            &-text {
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 36px;
+                letter-spacing: -0.02em;
+                text-transform: uppercase;
+                color: #8f8f8f;
+                @include mq("tablet", max) {
+                    font-size: 14x;
+                    line-height: 15px;
+                }
+                @include mq("mobile", max) {
+                    font-size: 17x;
+                    line-height: 15px;
+                }
+            }
+        }
+    }
+}
+
 .refer-modal {
     max-width: 539px;
     border: unset;
