feat: added the auction bid list component

--- a/src/styles/sass/components/_composition.scss
+++ b/src/styles/sass/components/_composition.scss
@@ -32,6 +32,12 @@
 .txt-cyan {
     color: $cyan;
 }
+.txt-scorpion {
+    color: $scorpion;
+}
+.txt-cinnabar {
+    color: $cinnabar;
+}
 .txt-underline {
     text-decoration: underline;
 }
