--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -6,6 +6,8 @@ $dimgrey: #464646;
 $red: #f7361a;
 $light-red: #ff6868;
 $cyan: #59d8f3;
+$scorpion: #626161;
+$cinnabar: #E8503A;
 
 // Media query breakpoints
 $breakpoints: (
