--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -168,6 +168,15 @@ input[type="number"]::-webkit-outer-spin-button {
 .border-bottom-1px {
     border-bottom: 1px !important;
 }
+
+.border-bottom-scorpion {
+    border-bottom: 1px solid #626161 !important;
+}
+
+.border-bottom-2-dark-gray {
+    border-bottom: 2px solid #464646;
+}
+
 .fv-small-caps {
     font-variant: small-caps !important;
 }
@@ -253,14 +262,10 @@ input[type="number"]::-webkit-outer-spin-button {
     white-space: nowrap !important;
 }
 
-.border-bottom-2-dark-gray {
-    border-bottom: 2px solid #464646;
-}
-
 .hover\:shadow-light {
     transition: 500ms;
     &:hover {
-        box-shadow: 0px 0px 8px lightgrey;
+        box-shadow: 0 0 8px lightgrey;
     }
 }
 .hover\:scale-125 {
