--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -47,6 +47,19 @@ input::-webkit-contacts-auto-fill-button {
     right: 0;
 }
 
+::-webkit-scrollbar {
+  width: 0.2em
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px white
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: white;
+    outline: 1px solid white;
+}
+
 input {
     border-radius: 0px !important;
 }
