Credit Card / Saved cards / Items / Added the active style

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -635,6 +635,9 @@
             font-weight: 500;
             color: #959595;
         }
+        .active {
+            border: 1px solid $green;
+        }
     }
     &-cta {
         & > div {
