--- a/src/styles/sass/components/_composition.scss
+++ b/src/styles/sass/components/_composition.scss
@@ -38,6 +38,10 @@
 .txt-cinnabar {
     color: $cinnabar;
 }
+.txt-mountainMeadow {
+    color: $mountainMeadow;
+}
+
 .txt-underline {
     text-decoration: underline;
 }
