--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -8,6 +8,7 @@ $light-red: #ff6868;
 $cyan: #59d8f3;
 $scorpion: #626161;
 $cinnabar: #E8503A;
+$mountainMeadow: #23C865;
 
 // Media query breakpoints
 $breakpoints: (
