--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -109,25 +109,37 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 }
 
-.mt-16px {
-    margin-top: 16px;
+@for $size from 4 to 100 {
+    .py-#{$size}px {
+        padding-top: #{$size}px !important;
+        padding-bottom: #{$size}px !important;
+    }
 }
 
-.py-12px {
-    padding-top: 12px;
-    padding-bottom: 12px;
+@for $size from 4 to 96 {
+    .px-#{$size}px {
+        padding-left: #{$size}px !important;
+        padding-right: #{$size}px !important;
+    }
 }
-.py-10px {
-    padding-top: 10px;
-    padding-bottom: 10px;
+
+@for $size from 4 to 96 {
+    .ml-#{$size}px {
+        margin-left: #{$size}px !important;
+    }
 }
-.px-55px {
-    padding-left: 55px;
-    padding-right: 55px;
+
+@for $size from 3 to 96 {
+    .mt-#{$size}px {
+        margin-top: #{$size}px !important;
+    }
 }
-.px-100px {
-    padding-left: 100px;
-    padding-right: 100px;
+
+.mt-1 {
+    margin-top: 1px !important;
+}
+.mb-5px {
+    margin-bottom: 5px !important;
 }
 
 //padding left
@@ -229,25 +241,11 @@ input[type="number"]::-webkit-outer-spin-button {
 .bg-gray {
     background: $grey;
 }
-.mt-1 {
-    margin-top: 1px !important;
-}
+
 //End: Background Color
 
 .scale-70 {
     transform: scale(0.7, 0.7);
-}
-.mt-30px {
-    margin-top: 30px;
-}
-.mt-3px {
-    margin-top: 3px !important;
-}
-.ml-45px {
-    margin-left: 45px !important;
-}
-.ml-8px {
-    margin-left: 8px;
 }
 
 .bg-black-10 {
@@ -258,20 +256,11 @@ input[type="number"]::-webkit-outer-spin-button {
     margin-left: 40px;
 }
 
-.mt-40px {
-    margin-top: 40px;
-}
-
 .first-letter\:text-green {
     color: white !important;
     &::first-letter {
         color: $green !important;
     }
-}
-
-.py-12px {
-    padding-top: 12px !important;
-    padding-bottom: 12px !important;
 }
 
 .w-max-content {
@@ -333,10 +322,3 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 85% !important;
 }
 
-.mt-9px {
-    margin-top: 9px !important;
-}
-
-.mb-5px {
-    margin-bottom: 5px !important;
-}
