--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -129,6 +129,12 @@ input[type="number"]::-webkit-outer-spin-button {
     }
 }
 
+@for $size from 4 to 96 {
+    .mr-#{$size}px {
+        margin-right: #{$size}px !important;
+    }
+}
+
 @for $size from 3 to 96 {
     .mt-#{$size}px {
         margin-top: #{$size}px !important;
@@ -143,7 +149,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 //padding left
-@for $size from 4 to 96 {
+@for $size from 0 to 96 {
     .pl-#{$size}px {
         padding-left: #{$size}px !important;
     }
