--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -640,7 +640,7 @@
         }
     }
     &-cta {
-        & > div {
+        & > button {
             height: 110px;
             border: 1px solid #959595;
             @include mq("phone") {
