--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -621,7 +621,7 @@
     overflow-y: auto;
     padding-right: 10px;
     &-item {
-        & > div {
+        & > button {
             height: 110px;
             padding: 15px 10px;
             border: 1px solid #959595;
