Payment / Added the navigation bar header border (it was missing laready)

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -1,4 +1,7 @@
 .payment-page {
+    .menu {
+        border-bottom: 2px solid #464646;
+    }
     .container {
         @include mq("tablet", max) {
             width: auto !important;
