--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -181,8 +181,7 @@
 
             .place-bid {
                 display: none;
-                margin-top: 58px;
-                margin-left: 50px;
+                margin: 58px 50px;
                 @include mq("tablet") {
                     display: block;
                 }
@@ -402,4 +401,67 @@
             padding: 8px 44px;
         }
     }
+}
+.select-internal-wallet {
+    border: 1px solid white;
+    padding-top: 6px;
+    padding-bottom: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+    z-index: 99;
+    &:hover {
+        background-color: $mountainMeadow;
+        cursor: pointer;
+        border: 1px solid $mountainMeadow
+    }
+}
+.select-external-wallet {
+    border: 1px solid white;
+    padding-top: 6px;
+    padding-bottom: 10px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+    z-index: 99;
+    &:hover {
+        background-color: $white;
+        cursor: pointer;
+        border: 1px solid $white;
+        color: $black;
+    }
+}
+.internal-wallet {
+    background-color: $mountainMeadow;
+    cursor: pointer;
+    border: 1px solid $mountainMeadow
+}
+.external-wallet {
+    background-color: $white;
+    cursor: pointer;
+    border: 1px solid $white;
+    color: $black;
+}
+.wallet-content {
+    height: 260px;
+    margin-top: 10px;
+}
+.wallet-icon {
+    width: 24px;
+    height: 24px;
+}
+.url-input {
+    margin-left: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
+    color: white;
+    border: 1px solid $dimgrey;
+    background: transparent;
+    height: 40px;
+    width: 350px;
+}
+.url-error-input {
+    border: 1px solid $red;
 }
