--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -9,6 +9,10 @@ $cyan: #59d8f3;
 $scorpion: #626161;
 $cinnabar: #E8503A;
 $mountainMeadow: #23C865;
+$dustGray: #959595;
+$pastelGreen: #5bd778;
+$grannyApple: #d6f5dd;
+
 
 // Media query breakpoints
 $breakpoints: (
