fix: fixed presale total price input style issue

--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -237,7 +237,6 @@
                     font-family: "Montserrat";
                     font-style: normal;
                     font-weight: bold;
-                    font-size: 24px;
                     line-height: 29px;
                     & > div {
                         max-height: unset !important;
@@ -309,6 +308,7 @@
         line-height: 29px;
         text-transform: uppercase;
         margin-bottom: 21px;
+        color: white;
     }
     .range-input,
     .total-input {
@@ -401,6 +401,19 @@
             padding: 8px 44px;
         }
     }
+}
+.presale-total-input {
+    width: 100%;
+    padding: 8px 10px;
+    margin-right: 18px;
+    background: #1e1e1e;
+    border: 1px solid #ffffff;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+    font-size: 30px;
+    line-height: 37px;
+    margin-left: 18px;
 }
 .select-internal-wallet {
     border: 1px solid white;
