--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -56,7 +56,7 @@
         }
 
         .timeframe-bar {
-            background: linear-gradient(270deg, #23c865 0%, #23c865 35.94%, #e8503a 57.81%);
+            background: linear-gradient(90deg, rgba(35,200,101,1) 0%, rgba(9,121,86,1) 56%, rgba(232,80,58,1) 100%);
             margin-top: 0;
             .timeleft {
                 &__value {
