--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -384,6 +384,7 @@
                 }
                 tbody {
                     @include custom-scroll(35vh);
+                    min-height: 100px;
                     @include mq("tablet", max) {
                         max-height: 350px;
                     }
