--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -346,6 +346,10 @@ input[type="number"]::-webkit-outer-spin-button {
     color: #959595;
 }
 
+.text-light-blue {
+    color: #59d8f3 !important;
+}
+
 .h-85 {
     height: 85% !important;
 }
@@ -389,4 +393,3 @@ input[type="number"]::-webkit-outer-spin-button {
 .left-0px {
     left: 0 !important;
 }
-
