--- a/src/styles/sass/page/_history.scss
+++ b/src/styles/sass/page/_history.scss
@@ -553,9 +553,18 @@
         .width4 {
             width: 100%;
         }
+        width: 100%;
+        overflow: auto;
+        border: none;
+        height: 100vh;
+    }
+    .min_height1 {
+        min-height: 400px;
+    }
+    .min_height2 {
+        min-height: 550px;
     }
     div.deposit {
-        min-height: 400px;
         margin: auto;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -579,7 +588,7 @@
             }
         }
         div.select_div {
-            margin-top: 15px;
+            margin-top: 10px;
         }
         p.subtitle {
             color: $lightgrey;
@@ -596,6 +605,23 @@
         }
         .black_input {
             height: 49px;
+        }
+        div.withdraw_amount {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            input {
+                width: 88%;
+                background: none;
+                border: none;
+                color: white;
+            }
+            p {
+                width: 12%;
+                span {
+                    color: $green;
+                }
+            }
         }
         div.transfer_input {
             display: flex;
