Wallet / Transactions / Added the withdraw details table for the

--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -24,7 +24,7 @@
 @import "page/signup";
 @import "page/select_figure";
 @import "page/payment";
-@import "page/history";
+@import "page/wallet";
 @import "page/profile";
 @import "page/verify";
 @import "page/verify-company";
