--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1135,3 +1135,9 @@ div.wallet_balances {
     border-radius: 100%;
     background-color: $green;
 }
+.gray-bullet {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: $dimgrey;
+}
