Wallet / Transactions / Added the bid table and updated its design

--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1141,6 +1141,12 @@ div.wallet_balances {
     border-radius: 100%;
     background-color: $dimgrey;
 }
+.red-bullet {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: $cinnabar;
+}
 
 .transaction-section-tables {
     max-height: 500px;
