fixed the minor issue of ndb wallet select

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -326,6 +326,7 @@
         }
         .wallet-tab {
             .balance-select {
+                height: 49px;
                 @include mq("laptop", max) {
                     margin-bottom: 16px;
                 }
