--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -218,7 +218,15 @@
             }
             .select_div {
                 display: flex;
-                
+                .col-lg-8 {
+                    margin-left: 10px;
+                }
+                @include mq('phone', max) {
+                    flex-direction:  column;
+                    .col-lg-8 {
+                        margin-left: 0;
+                    }
+                }
             }
         }
 
