--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -338,6 +338,11 @@ input[type="number"]::-webkit-outer-spin-button {
     height: 25px;
 }
 
+.icon-30px {
+    height: 30px;
+    width: 30px;
+}
+
 .ps-6px {
     padding-left: 6px !important;
 }
