--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -402,3 +402,8 @@ input[type="number"]::-webkit-outer-spin-button {
 .left-0px {
     left: 0 !important;
 }
+
+.icon-sm {
+    width: 15px;
+    height: 15px;
+}
