--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -328,6 +328,10 @@ input[type="number"]::-webkit-outer-spin-button {
     text-decoration: underline !important;
 }
 
+.text-green {
+    color: #23c865;
+}
+
 .icon-23px {
     width: 23px;
     height: 23px;
