--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -108,6 +108,11 @@ input[type="number"]::-webkit-outer-spin-button {
         color: #e3e3e3 !important;
     }
 }
+.placeholder\:text-lightgray {
+    &::placeholder {
+        color: lightgray;
+    }
+}
 
 @for $size from 4 to 100 {
     .py-#{$size}px {
